[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/date_time_picker/date/DatePanel.gd" type="Script" id=1]
[ext_resource path="res://scenes/date_time_picker/time/Time.gd" type="Script" id=2]
[ext_resource path="res://scenes/date_time_picker/Picker.gd" type="Script" id=3]
[ext_resource path="res://material/font/generated/alph_24.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/date_time_picker/time/TimePanel.gd" type="Script" id=5]
[ext_resource path="res://scenes/date_time_picker/DateTimePicker.gd" type="Script" id=6]
[ext_resource path="res://scenes/date_time_picker/date/Days.gd" type="Script" id=7]
[ext_resource path="res://scenes/date_time_picker/PickerPopup.gd" type="Script" id=8]
[ext_resource path="res://material/themes/line_edit.tres" type="StyleBox" id=9]

[sub_resource type="StyleBoxEmpty" id=5]
content_margin_left = 10.0
content_margin_right = 10.0

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.235294 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.588235 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id=18]
default_font = ExtResource( 4 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0, 0, 0, 1 )
Button/colors/font_color_focus = Color( 1, 1, 1, 1 )
Button/colors/font_color_hover = Color( 1, 1, 1, 1 )
Button/colors/font_color_pressed = Color( 0.25098, 0.619608, 1, 1 )
Button/styles/disabled = SubResource( 5 )
Button/styles/focus = SubResource( 10 )
Button/styles/hover = SubResource( 6 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 7 )
LineEdit/styles/focus = ExtResource( 9 )
LineEdit/styles/normal = ExtResource( 9 )
LineEdit/styles/read_only = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=20]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
bg_color = Color( 0.172549, 0.164706, 0.196078, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="StyleBoxFlat" id=11]
draw_center = false
border_width_bottom = 1

[sub_resource type="Theme" id=13]
Label/styles/normal = SubResource( 11 )

[sub_resource type="StyleBoxFlat" id=21]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.172549, 0.164706, 0.196078, 1 )
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="DateTimePicker" type="LineEdit"]
margin_right = 280.0
margin_bottom = 45.0
rect_min_size = Vector2( 280, 45 )
theme = SubResource( 18 )
text = "2023-01-30 00:00:00"
align = 1
context_menu_enabled = false
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 6 )

[node name="PickerPopup" type="Popup" parent="."]
focus_mode = 1
script = ExtResource( 8 )

[node name="LineEdit" type="LineEdit" parent="PickerPopup"]
margin_right = 280.0
margin_bottom = 45.0
rect_min_size = Vector2( 280, 45 )
text = "2023-01-30 00:00:00"
align = 1
max_length = 19
context_menu_enabled = false
caret_blink = true
caret_blink_speed = 0.5

[node name="Picker" type="VBoxContainer" parent="PickerPopup"]
margin_top = 50.0
margin_right = 450.0
margin_bottom = 160.0
mouse_filter = 2
custom_constants/separation = 0
script = ExtResource( 3 )

[node name="DatePanel" type="PanelContainer" parent="PickerPopup/Picker"]
margin_right = 450.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 50 )
custom_styles/panel = SubResource( 20 )
script = ExtResource( 1 )

[node name="DateButton" type="Button" parent="PickerPopup/Picker/DatePanel"]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 440.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 45 )
text = "Date"

[node name="Date" type="VBoxContainer" parent="PickerPopup/Picker/DatePanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 440.0
margin_bottom = 55.0
custom_constants/separation = 0

[node name="Control" type="HBoxContainer" parent="PickerPopup/Picker/DatePanel/Date"]
margin_right = 430.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 45 )
custom_constants/separation = 0

[node name="Prev" type="HBoxContainer" parent="PickerPopup/Picker/DatePanel/Date/Control"]
margin_right = 100.0
margin_bottom = 45.0
rect_min_size = Vector2( 100, 0 )
custom_constants/separation = 0

[node name="Year" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Control/Prev"]
margin_right = 50.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 45 )
text = "<<"

[node name="Month" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Control/Prev"]
margin_left = 50.0
margin_right = 100.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 45 )
text = "<"

[node name="Current" type="HBoxContainer" parent="PickerPopup/Picker/DatePanel/Date/Control"]
margin_left = 100.0
margin_right = 330.0
margin_bottom = 45.0
rect_min_size = Vector2( 230, 0 )
custom_constants/separation = 0
alignment = 1

[node name="Year" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Control/Current"]
margin_left = 30.0
margin_right = 136.0
margin_bottom = 45.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
disabled = true
text = "2023 年"

[node name="Month" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Control/Current"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 45.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
disabled = true
text = "1 月"

[node name="Next" type="HBoxContainer" parent="PickerPopup/Picker/DatePanel/Date/Control"]
margin_left = 330.0
margin_right = 430.0
margin_bottom = 45.0
rect_min_size = Vector2( 100, 0 )
custom_constants/separation = 0
alignment = 2

[node name="Month" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Control/Next"]
margin_right = 50.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 45 )
text = ">"

[node name="Year" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Control/Next"]
margin_left = 50.0
margin_right = 100.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 45 )
text = ">>"

[node name="Days" type="VBoxContainer" parent="PickerPopup/Picker/DatePanel/Date"]
margin_top = 45.0
margin_right = 430.0
margin_bottom = 45.0
theme = SubResource( 13 )
custom_constants/separation = 5
script = ExtResource( 7 )

[node name="Week" type="HBoxContainer" parent="PickerPopup/Picker/DatePanel/Date/Days"]
visible = false
margin_right = 430.0
margin_bottom = 35.0
custom_constants/separation = 0
alignment = 1

[node name="Label" type="Label" parent="PickerPopup/Picker/DatePanel/Date/Days/Week"]
margin_left = 22.0
margin_right = 77.0
margin_bottom = 35.0
rect_min_size = Vector2( 55, 0 )
text = "日"
align = 1
valign = 1

[node name="Label2" type="Label" parent="PickerPopup/Picker/DatePanel/Date/Days/Week"]
margin_left = 77.0
margin_right = 132.0
margin_bottom = 35.0
rect_min_size = Vector2( 55, 0 )
text = "一"
align = 1
valign = 1

[node name="Label3" type="Label" parent="PickerPopup/Picker/DatePanel/Date/Days/Week"]
margin_left = 132.0
margin_right = 187.0
margin_bottom = 35.0
rect_min_size = Vector2( 55, 0 )
text = "二"
align = 1
valign = 1

[node name="Label4" type="Label" parent="PickerPopup/Picker/DatePanel/Date/Days/Week"]
margin_left = 187.0
margin_right = 242.0
margin_bottom = 35.0
rect_min_size = Vector2( 55, 0 )
text = "三"
align = 1
valign = 1

[node name="Label5" type="Label" parent="PickerPopup/Picker/DatePanel/Date/Days/Week"]
margin_left = 242.0
margin_right = 297.0
margin_bottom = 35.0
rect_min_size = Vector2( 55, 0 )
text = "四"
align = 1
valign = 1

[node name="Label6" type="Label" parent="PickerPopup/Picker/DatePanel/Date/Days/Week"]
margin_left = 297.0
margin_right = 352.0
margin_bottom = 35.0
rect_min_size = Vector2( 55, 0 )
text = "五"
align = 1
valign = 1

[node name="Label7" type="Label" parent="PickerPopup/Picker/DatePanel/Date/Days/Week"]
margin_left = 352.0
margin_right = 407.0
margin_bottom = 35.0
rect_min_size = Vector2( 55, 0 )
text = "六"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PickerPopup/Picker/DatePanel/Date/Days"]
visible = false
margin_right = 430.0
margin_bottom = 45.0
custom_constants/separation = 0
alignment = 1

[node name="Label" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer2"]
margin_left = 22.0
margin_right = 77.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "31"

[node name="Label2" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer2"]
margin_left = 77.0
margin_right = 132.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
rect_clip_content = true
text = "01"

[node name="Label3" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer2"]
margin_left = 132.0
margin_right = 187.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "02"

[node name="Label4" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer2"]
margin_left = 187.0
margin_right = 242.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "03"

[node name="Label5" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer2"]
margin_left = 242.0
margin_right = 297.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "04"

[node name="Label6" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer2"]
margin_left = 297.0
margin_right = 352.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "05"

[node name="Label7" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer2"]
margin_left = 352.0
margin_right = 407.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "06"

[node name="HBoxContainer3" type="HBoxContainer" parent="PickerPopup/Picker/DatePanel/Date/Days"]
visible = false
margin_right = 430.0
margin_bottom = 45.0
custom_constants/separation = 0
alignment = 1

[node name="Label" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer3"]
margin_left = 22.0
margin_right = 77.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "31"

[node name="Label2" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer3"]
margin_left = 77.0
margin_right = 132.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "01"

[node name="Label3" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer3"]
margin_left = 132.0
margin_right = 187.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "02"

[node name="Label4" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer3"]
margin_left = 187.0
margin_right = 242.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "03"

[node name="Label5" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer3"]
margin_left = 242.0
margin_right = 297.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "04"

[node name="Label6" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer3"]
margin_left = 297.0
margin_right = 352.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "05"

[node name="Label7" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer3"]
margin_left = 352.0
margin_right = 407.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "06"

[node name="HBoxContainer4" type="HBoxContainer" parent="PickerPopup/Picker/DatePanel/Date/Days"]
visible = false
margin_right = 430.0
margin_bottom = 45.0
custom_constants/separation = 0
alignment = 1

[node name="Label" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer4"]
margin_left = 22.0
margin_right = 77.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "31"

[node name="Label2" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer4"]
margin_left = 77.0
margin_right = 132.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "01"

[node name="Label3" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer4"]
margin_left = 132.0
margin_right = 187.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "02"

[node name="Label4" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer4"]
margin_left = 187.0
margin_right = 242.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "03"

[node name="Label5" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer4"]
margin_left = 242.0
margin_right = 297.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "04"

[node name="Label6" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer4"]
margin_left = 297.0
margin_right = 352.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "05"

[node name="Label7" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer4"]
margin_left = 352.0
margin_right = 407.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "06"

[node name="HBoxContainer5" type="HBoxContainer" parent="PickerPopup/Picker/DatePanel/Date/Days"]
visible = false
margin_right = 430.0
margin_bottom = 45.0
custom_constants/separation = 0
alignment = 1

[node name="Label" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer5"]
margin_left = 22.0
margin_right = 77.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "31"

[node name="Label2" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer5"]
margin_left = 77.0
margin_right = 132.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "01"

[node name="Label3" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer5"]
margin_left = 132.0
margin_right = 187.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "02"

[node name="Label4" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer5"]
margin_left = 187.0
margin_right = 242.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "03"

[node name="Label5" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer5"]
margin_left = 242.0
margin_right = 297.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "04"

[node name="Label6" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer5"]
margin_left = 297.0
margin_right = 352.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "05"

[node name="Label7" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer5"]
margin_left = 352.0
margin_right = 407.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "06"

[node name="HBoxContainer6" type="HBoxContainer" parent="PickerPopup/Picker/DatePanel/Date/Days"]
visible = false
margin_right = 430.0
margin_bottom = 45.0
custom_constants/separation = 0
alignment = 1

[node name="Label" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer6"]
margin_left = 22.0
margin_right = 77.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "31"

[node name="Label2" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer6"]
margin_left = 77.0
margin_right = 132.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "01"

[node name="Label3" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer6"]
margin_left = 132.0
margin_right = 187.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "02"

[node name="Label4" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer6"]
margin_left = 187.0
margin_right = 242.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "03"

[node name="Label5" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer6"]
margin_left = 242.0
margin_right = 297.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "04"

[node name="Label6" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer6"]
margin_left = 297.0
margin_right = 352.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "05"

[node name="Label7" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer6"]
margin_left = 352.0
margin_right = 407.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "06"

[node name="HBoxContainer7" type="HBoxContainer" parent="PickerPopup/Picker/DatePanel/Date/Days"]
visible = false
margin_right = 430.0
margin_bottom = 45.0
custom_constants/separation = 0
alignment = 1

[node name="Label" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer7"]
margin_left = 22.0
margin_right = 77.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "31"

[node name="Label2" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer7"]
margin_left = 77.0
margin_right = 132.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "01"

[node name="Label3" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer7"]
margin_left = 132.0
margin_right = 187.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "02"

[node name="Label4" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer7"]
margin_left = 187.0
margin_right = 242.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "03"

[node name="Label5" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer7"]
margin_left = 242.0
margin_right = 297.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "04"

[node name="Label6" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer7"]
margin_left = 297.0
margin_right = 352.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "05"

[node name="Label7" type="Button" parent="PickerPopup/Picker/DatePanel/Date/Days/HBoxContainer7"]
margin_left = 352.0
margin_right = 407.0
margin_bottom = 45.0
rect_min_size = Vector2( 55, 45 )
text = "06"

[node name="TimePanel" type="PanelContainer" parent="PickerPopup/Picker"]
margin_top = 55.0
margin_right = 450.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 50 )
custom_styles/panel = SubResource( 21 )
script = ExtResource( 5 )

[node name="TimeButton" type="Button" parent="PickerPopup/Picker/TimePanel"]
margin_left = 10.0
margin_right = 440.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 45 )
text = "Time"

[node name="Time" type="HBoxContainer" parent="PickerPopup/Picker/TimePanel"]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 440.0
margin_bottom = 185.0
custom_constants/separation = 50
alignment = 1
script = ExtResource( 2 )

[node name="Hour" type="VBoxContainer" parent="PickerPopup/Picker/TimePanel/Time"]
margin_left = 90.0
margin_right = 140.0
margin_bottom = 175.0
custom_constants/separation = 20

[node name="Add" type="Button" parent="PickerPopup/Picker/TimePanel/Time/Hour"]
margin_right = 50.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 45 )
text = "+"

[node name="Value" type="Button" parent="PickerPopup/Picker/TimePanel/Time/Hour"]
margin_top = 65.0
margin_right = 50.0
margin_bottom = 110.0
rect_min_size = Vector2( 50, 45 )
text = "00"

[node name="Subtract" type="Button" parent="PickerPopup/Picker/TimePanel/Time/Hour"]
margin_top = 130.0
margin_right = 50.0
margin_bottom = 175.0
rect_min_size = Vector2( 50, 45 )
text = "-"

[node name="Minute" type="VBoxContainer" parent="PickerPopup/Picker/TimePanel/Time"]
margin_left = 190.0
margin_right = 240.0
margin_bottom = 175.0
custom_constants/separation = 20

[node name="Add" type="Button" parent="PickerPopup/Picker/TimePanel/Time/Minute"]
margin_right = 50.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 45 )
text = "+"

[node name="Value" type="Button" parent="PickerPopup/Picker/TimePanel/Time/Minute"]
margin_top = 65.0
margin_right = 50.0
margin_bottom = 110.0
rect_min_size = Vector2( 50, 45 )
text = "00"

[node name="Subtract" type="Button" parent="PickerPopup/Picker/TimePanel/Time/Minute"]
margin_top = 130.0
margin_right = 50.0
margin_bottom = 175.0
rect_min_size = Vector2( 50, 45 )
text = "-"

[node name="Second" type="VBoxContainer" parent="PickerPopup/Picker/TimePanel/Time"]
margin_left = 290.0
margin_right = 340.0
margin_bottom = 175.0
custom_constants/separation = 20

[node name="Add" type="Button" parent="PickerPopup/Picker/TimePanel/Time/Second"]
margin_right = 50.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 45 )
text = "+"

[node name="Value" type="Button" parent="PickerPopup/Picker/TimePanel/Time/Second"]
margin_top = 65.0
margin_right = 50.0
margin_bottom = 110.0
rect_min_size = Vector2( 50, 45 )
text = "00"

[node name="Subtract" type="Button" parent="PickerPopup/Picker/TimePanel/Time/Second"]
margin_top = 130.0
margin_right = 50.0
margin_bottom = 175.0
rect_min_size = Vector2( 50, 45 )
text = "-"

[connection signal="focus_entered" from="." to="." method="_on_DateTimePicker_focus_entered"]
[connection signal="text_entered" from="." to="." method="_on_DateTimePicker_text_entered"]
[connection signal="about_to_show" from="PickerPopup" to="PickerPopup" method="_on_PickerPopup_about_to_show"]
[connection signal="focus_entered" from="PickerPopup" to="PickerPopup" method="_on_PickerPopup_focus_entered"]
[connection signal="popup_hide" from="PickerPopup" to="PickerPopup" method="_on_PickerPopup_popup_hide"]
[connection signal="text_entered" from="PickerPopup/LineEdit" to="." method="_on_DateTimePicker_text_entered"]
[connection signal="resized" from="PickerPopup/Picker/DatePanel" to="PickerPopup" method="_on_DatePanel_resized"]
[connection signal="pressed" from="PickerPopup/Picker/DatePanel/DateButton" to="PickerPopup/Picker" method="_on_DateButton_pressed"]
[connection signal="pressed" from="PickerPopup/Picker/DatePanel/Date/Control/Prev/Year" to="PickerPopup/Picker/DatePanel" method="prev_year"]
[connection signal="pressed" from="PickerPopup/Picker/DatePanel/Date/Control/Prev/Month" to="PickerPopup/Picker/DatePanel" method="prev_month"]
[connection signal="pressed" from="PickerPopup/Picker/DatePanel/Date/Control/Next/Month" to="PickerPopup/Picker/DatePanel" method="next_month"]
[connection signal="pressed" from="PickerPopup/Picker/DatePanel/Date/Control/Next/Year" to="PickerPopup/Picker/DatePanel" method="next_year"]
[connection signal="resized" from="PickerPopup/Picker/TimePanel" to="PickerPopup" method="_on_TimePanel_resized"]
[connection signal="pressed" from="PickerPopup/Picker/TimePanel/TimeButton" to="PickerPopup/Picker" method="_on_TimeButton_pressed"]
